[project]
name = "release-microsoft_sql_server_mcp"
version = "0.1.0+release.2"
description = "MCP SQL Server (empaquetado release/, instalable via uvx)"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "pymssql>=2.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mssql_mcp_server = "mssql_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mssql_mcp_server"]
